--- a/profile.d/install
+++ b/profile.d/install
@@ -5,14 +5,14 @@ weave() {
 	fi
 
 	mkdir -p "/tmp/$1" &&
-		wget -q --show-progress --progress=bar -O "/tmp/$1.tgz" "https://github.com/h3nc4/$1/releases/latest/download/$1.tgz" &&
-		wget -q -O "/tmp/$1.tgz.asc" "https://github.com/h3nc4/$1/releases/latest/download/$1.tgz.asc" &&
-		gpg --no-default-keyring --keyring /usr/share/keyrings/dreamweaver.gpg --verify "/tmp/$1.tgz.asc" "/tmp/$1.tgz" 2>/dev/null &&
-		tar --strip-components=1 -C "/tmp/$1" -xf "/tmp/$1.tgz" &&
+		wget -q --show-progress --progress=bar -O "/tmp/$1.tar.gz" "https://github.com/h3nc4/$1/releases/latest/download/$1.tar.gz" &&
+		wget -q -O "/tmp/$1.tar.gz.asc" "https://github.com/h3nc4/$1/releases/latest/download/$1.tar.gz.asc" &&
+		gpg --no-default-keyring --keyring /usr/share/keyrings/dreamweaver.gpg --verify "/tmp/$1.tar.gz.asc" "/tmp/$1.tar.gz" 2>/dev/null &&
+		tar --strip-components=1 -C "/tmp/$1" -xf "/tmp/$1.tar.gz" &&
 		(cd "/tmp/$1" && doas ./install) &&
 		echo "Successfully installed $1" >&2 ||
 		echo "Got an error while installing $1" >&2
-	rm -rf "/tmp/$1/" "/tmp/$1.tgz" "/tmp/$1.tgz.asc"
+	rm -rf "/tmp/$1/" "/tmp/$1.tar.gz" "/tmp/$1.tar.gz.asc"
 }
 
 weavekeys() {
